# qgen

./: README.md  pyproject.toml
.github/workflows/: build.yml
docs/: architecture.md
examples/: bell_qiskit.py  config.yaml  grover_new_qiskit.py  grover_origin_qiskit.py  grover_qiskit.py  grover_qiskit_new.py  ibm_template_usage.md  order_search_FULL.py  ordered_search.py  tsp8_qiskit.py  tsp_qiskit.py
examples/vht/: vht_ibm.py
qsg/: cli.py  config.py  detect.py  ionq-bell.py  spinq.pub  spinq.py
qsg/adapters/: __init__.py  azure_qir.py  base.py  braket_qasm3.py  braket_qiskit.py  google_cirq.py  ibm_qasm3.py  rigetti_qir.py  template_manager.py
qsg/adapters/templates/: azure_submit.py.j2  braket_qiskit_submit.py.j2  braket_submit.py.j2  google_submit.py.j2  ibm_sampler.py.j2
qsg/container/: docker.py
qsg/container/templates/: Dockerfile.j2  entrypoint.sh.j2
qsg/ir/: lower.py
qsg/manifests/: k8s_job.yaml.j2
tests/: test_adapter_registry.py  test_azure_adapter.py  test_braket_adapter.py  test_braket_qiskit_adapter.py  test_cli.py  test_config.py  test_detect.py  test_google_adapter.py  test_ibm_adapter.py  test_ir_lower.py
tools/: plot_results.py  runner.py
