[project]
name = "quantum-service-generator"
version = "0.1.0"
description = "Vendor-neutral quantum service generator (IR-first)."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "jinja2>=3.1",
  "docker>=7.0",
  "qiskit>=1.0",
  "qiskit-qir>=0.5",
  "cirq-core>=1.3",
  "qiskit-ibm-runtime>=0.25",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
azure = ["azure-quantum>=1.0"]
rigetti = ["qcs-sdk-python>=0.24"]
braket = ["amazon-braket-sdk>=1.73"]

[project.scripts]
qsg = "qsg.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
